--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <meta name="google-signin-client_id" content="396948350030-m5ekqe4j12f7fmjh23ne87jv8iuusntn.apps.googleusercontent.com">
 </head>
 <body>
+
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5e9f7e1e037365054453613f-283.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZTlmN2UxZTAzNzM2NTA1NDQ1MzYxM2YiLCJub21icmUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQGdtYWlsLmNvbSIsIl9fdiI6MCwiaW1nIjoiNWU5ZjdlMWUwMzczNjUwNTQ0NTM2MTNmLTQ5OS5wbmcifSwiaWF0IjoxNTg3ODY1NzIzLCJleHAiOjE1ODgwMzg1MjN9.1BfzY48ERAzRUfmFYzqjrwXuibk3Uhsjwa6GUEDQI5E" alt=""> -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
